<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        android:text="@string/max_min_temperature"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherTextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/pressure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/visibility"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/maxMinTempTextView"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/visibilityTextView"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/feels_like"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

    <TextView
        android:id="@+id/feelsLikeTempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/wind"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/updated"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/updatedTextView"
        app:layout_constraintTop_toTopOf="@+id/updatedTextView" />

    <TextView
        android:id="@+id/updatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/sunrise_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/sunriseTextView"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/sunset_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/sunsetTextView"
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#349eeb"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@null"
        tools:srcCompat="@tools:sample/avatars"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>